[package]
name = "dio-align"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/al8n/dio-align"
homepage = "https://github.com/al8n/dio-align"
documentation = "https://docs.rs/dio-align"
description = "Query direct I/O alignment requirements for a filesystem path."
license = "MIT OR Apache-2.0"
rust-version = "1.85"
keywords = ["direct-io", "alignment", "dio", "block-alignment"]
categories = ["filesystem", "development-tools"]

[features]
default = []

[dependencies]
rustix = { version = "1", default-features = false, features = ["fs", "std"] }

[target.'cfg(target_os = "linux")'.dependencies]
smol_str = { version = "0.3", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_Ioctl",
  "Win32_Security",
] }

[dev-dependencies]
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
rust_2018_idioms = "warn"
single_use_lifetimes = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(all_tests)',
  'cfg(tarpaulin)',
  'cfg(linux_kernel_6_1)',
  'cfg(apple)',
] }
